--- a/.gitconfig
+++ b/.gitconfig
@@ -1,24 +1,24 @@
 [user]
-	name = griera
-	email = genis.riera.perez@gmail.com
+    name = griera
+    email = genis.riera.perez@gmail.com
 [core]
-	editor = vim
+    editor = vim
 [merge]
-	tool = vimdiff
+    tool = vimdiff
 [color]
-	ui = true
+    ui = true
 [alias]
-	st = status
-	ph = push
-	cim = commit -m
-	ciam = commit -am
-	cimam = commit --amend -m
-	cl = clone
-	aa = add -A
-	f = fetch
-	m = merge
-	br = branch
-	d = diff
-	phom = push -u origin master
-	netitprofile = config user.email \"griera@ac.upc.edu\"
-	co = checkout
+    st = status
+    ph = push
+    cim = commit -m
+    ciam = commit -am
+    cimam = commit --amend -m
+    cl = clone
+    aa = add -A
+    f = fetch
+    m = merge
+    br = branch
+    d = diff
+    phom = push -u origin master
+    starflow = config user.email \"griera@starflownetworks.com\"
+    co = checkout
