--- a/.i3/config
+++ b/.i3/config
@@ -149,7 +149,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    position top
+    status_command i3status
+    workspace_buttons yes
 }
 
 ######################
