--- a/.i3/config
+++ b/.i3/config
@@ -165,5 +165,5 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id xcompmgr -c -f -F -n
 
 exec --no-startup-id ~/.dropbox-dist/dropbox.py start
-exec --no-startup-id ~/bittorrent_sync/btsync --config ~/bittorrent_sync/btsync.config
-exec --no-startup-id sleep 0.2 && i3-sensible-terminal
+exec --no-startup-id ~/bittorrent_sync/btsync
+exec --no-startup-id sleep 0.1 && i3-sensible-terminal
