--- a/.i3/config
+++ b/.i3/config
@@ -164,6 +164,6 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 # Start xcompmgr, a sample X compositing manager
 exec --no-startup-id xcompmgr -c -f -F -n
 
-exec --no-startup-id ~/.dropbox-dist/dropbox.py start
+exec --no-startup-id ~/.dropbox-dist/dropboxd
 exec --no-startup-id ~/bittorrent_sync/btsync
 exec --no-startup-id sleep 0.1 && i3-sensible-terminal
