--- a/.i3/config
+++ b/.i3/config
@@ -167,3 +167,4 @@ exec --no-startup-id xcompmgr -c -f -F -n
 exec --no-startup-id ~/.dropbox-dist/dropboxd
 exec --no-startup-id ~/bittorrent_sync/btsync
 exec --no-startup-id sleep 0.2 && i3-sensible-terminal
+exec --no-startup-id xbindkeys_autostart
