--- a/ThinkPad-X250/.i3/config
+++ b/ThinkPad-X250/.i3/config
@@ -164,6 +164,6 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 # Start xcompmgr, a sample X compositing manager
 exec --no-startup-id xcompmgr -c -f -F -n
 
-exec --no-startup-id ~/bittorrent_sync/btsync --storage ~/bittorrent_sync/.sync
+exec --no-startup-id rslsync --storage ~/resilio_sync/.sync
 exec --no-startup-id sleep 0.2 && i3-sensible-terminal
 exec --no-startup-id xbindkeys_autostart
