--- a/debian-home/.gitconfig
+++ b/debian-home/.gitconfig
@@ -22,7 +22,7 @@
     br = branch
     df = diff
     phom = push -u origin master
-    starflow = config user.email \"griera@starflownetworks.com\"
+    flexiwan = config user.email \"genisrp@flexiwan.com\"
     co = checkout
     lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an <%ae>%C(reset)' --all
     lgf = log --follow -p --
